feat: 重新引入react-emoji

--- a/components/Message/MessageInput/styles.module.css
+++ b/components/Message/MessageInput/styles.module.css
@@ -58,8 +58,8 @@
 }
 
 .pnMsgInputEmojiPicker {
-  bottom: 16px;
-  left: 16px;
+  bottom: 46px;
+  left: 0;
   right: 95px;
   position: absolute;
 }
