feat: 修复workspace点击提交问题和bot模式无法存储聊天的问题

--- a/components/Message/MessageInput/styles.module.css
+++ b/components/Message/MessageInput/styles.module.css
@@ -61,9 +61,8 @@
   font-family: inherit;
   font-size: 13px;
   font-weight: bold;
-  margin: 0 9px;
+  padding: 0 9px;
   min-width: 0;
-  padding: 0;
   white-space: nowrap;
 }
 
