fix: 邮件验证码功能

--- a/components/Chat/Main/styles.module.css
+++ b/components/Chat/Main/styles.module.css
@@ -2,3 +2,9 @@
   height: calc(100vh - 136px);
   overflow-y: scroll;
 }
+
+.unaothorizationMessage {
+  display: flex;
+  left: 50%;
+  position: relative;
+}
